Bug 765444 - Update device storage paths for Gonk. r=fabrice