dom/devicestorage/nsDeviceStorage.cpp
@@ -138,15 +138,23 @@ nsDOMDeviceStorage::SetRootFileForType(const nsAString& aType, const PRInt32 aIn
   nsCOMPtr<nsIProperties> dirService = do_GetService(NS_DIRECTORY_SERVICE_CONTRACTID);
   NS_ASSERTION(dirService, "Must have directory service");
 
+#ifdef MOZ_WIDGET_GONK
+  // check that /sdcard exists, if it doesn't go no further.
+  NS_NewLocalFile(NS_LITERAL_STRING("/sdcard"), false, getter_AddRefs(f));
+  bool check = false;
+  f->Exists(&check);
+  if (!check) {
+    mFile = nsnull;
+    return typeResult;
+  }
+  f = nsnull;
+#endif
+
   // Picture directory
   if (aType.Equals(NS_LITERAL_STRING("pictures"))) {
 #ifdef MOZ_WIDGET_GONK
     if (aIndex == 0) {
-      NS_NewLocalFile(NS_LITERAL_STRING("/data/pictures"), false, getter_AddRefs(f));
-    }
-    else if (aIndex == 1) {
-      NS_NewLocalFile(NS_LITERAL_STRING("/sdcard/DCIM"), false, getter_AddRefs(f));
-      typeResult = DEVICE_STORAGE_TYPE_EXTERNAL;
+      NS_NewLocalFile(NS_LITERAL_STRING("/sdcard/Pictures"), false, getter_AddRefs(f));
     }
 #elif defined (MOZ_WIDGET_COCOA)
     if (aIndex == 0) {
@@ -163,11 +171,7 @@ nsDOMDeviceStorage::SetRootFileForType(const nsAString& aType, const PRInt32 aIn
   if (aType.Equals(NS_LITERAL_STRING("videos"))) {
 #ifdef MOZ_WIDGET_GONK
     if (aIndex == 0) {
-      NS_NewLocalFile(NS_LITERAL_STRING("/data/videos"), false, getter_AddRefs(f));
-    }
-    else if (aIndex == 1) {
-      NS_NewLocalFile(NS_LITERAL_STRING("/sdcard/videos"), false, getter_AddRefs(f));
-      typeResult = DEVICE_STORAGE_TYPE_EXTERNAL;
+      NS_NewLocalFile(NS_LITERAL_STRING("/sdcard/Movies"), false, getter_AddRefs(f));
     }
 #elif defined (MOZ_WIDGET_COCOA)
     if (aIndex == 0) {
@@ -184,11 +188,7 @@ nsDOMDeviceStorage::SetRootFileForType(const nsAString& aType, const PRInt32 aIn
   if (aType.Equals(NS_LITERAL_STRING("music"))) {
 #ifdef MOZ_WIDGET_GONK
     if (aIndex == 0) {
-      NS_NewLocalFile(NS_LITERAL_STRING("/data/music"), false, getter_AddRefs(f));
-    }
-    else if (aIndex == 1) {
-      NS_NewLocalFile(NS_LITERAL_STRING("/sdcard/music"), false, getter_AddRefs(f));
-      typeResult = DEVICE_STORAGE_TYPE_EXTERNAL;
+      NS_NewLocalFile(NS_LITERAL_STRING("/sdcard/Music"), false, getter_AddRefs(f));
     }
 #elif defined (MOZ_WIDGET_COCOA)
     if (aIndex == 0) {
